# gatb-core

./: .gitlab-ci.yml  .travis.yml  README.md
gatb-core/: .cproject  .gitignore  .project  CMakeLists.txt  DELIVERY.md  README.md  RELEASES.md  THIRDPARTIES.md
gatb-core/cmake/: CppUnit.cmake  DefineInteger.cmake  Delivery.cmake  GatbCore.cmake  GetDate.cmake
gatb-core/doc/: CMakeLists.txt
gatb-core/doc/book/: .gitignore  main.tex
gatb-core/doc/doxygen/: doxygen.css  gatb.doxyfile
gatb-core/doc/doxygen/src/: dbgh5page.hpp  designpage.hpp  downloadpage.hpp  mainpage.hpp  snippetspage.hpp  testspage.hpp
gatb-core/doc/misc/: README.txt
gatb-core/docker/: Dockerfile  Dockerfile.clang  gatb-compile.sh  gatb-test.sh
gatb-core/examples/: CMakeLists.txt  Makefile  README.md  bank3.cpp  bank4.cpp  bank5.cpp  bank6.cpp  bank7.cpp  bank8.cpp  debruijn1.cpp  debruijn10.cpp  debruijn11.cpp  debruijn12.cpp  debruijn13.cpp  debruijn2.cpp  debruijn3.cpp  debruijn4.cpp  debruijn5.cpp  debruijn7.cpp  debruijn9.cpp  iterators3.cpp  iterators4.cpp  kmer1.cpp  kmer2.cpp  kmer3.cpp  kmer4.cpp  kmer5.cpp  kmer6.cpp
gatb-core/examples/bank/: bank1.cpp  bank10.cpp  bank11.cpp  bank12.cpp  bank13.cpp  bank14.cpp  bank15.cpp  bank16.cpp  bank17.cpp  bank18.cpp  bank19.cpp  bank2.cpp  bank20.cpp  bank21.cpp  bank22.cpp  bank23.cpp  bank24.cpp  bank25.cpp  bank26.cpp  bank27.cpp  bank28.cpp  bank3.cpp  bank4.cpp  bank5.cpp  bank6.cpp  bank7.cpp  bank8.cpp  bank9.cpp
gatb-core/examples/debruijn/: debruijn1.cpp  debruijn10.cpp  debruijn11.cpp  debruijn12.cpp  debruijn13.cpp  debruijn14.cpp  debruijn15.cpp  debruijn16.cpp  debruijn17.cpp  debruijn18.cpp  debruijn19.cpp  debruijn2.cpp  debruijn20.cpp  debruijn21.cpp  debruijn22.cpp  debruijn23.cpp  debruijn24.cpp  debruijn25.cpp  debruijn26.cpp  debruijn27.cpp  debruijn3.cpp  debruijn4.cpp  debruijn5.cpp  debruijn6.cpp  debruijn7.cpp  debruijn8.cpp  debruijn9.cpp  traversal1.cpp  traversal2.cpp
gatb-core/examples/kmer/: kmer1.cpp  kmer10.cpp  kmer11.cpp  kmer12.cpp  kmer13.cpp  kmer14.cpp  kmer15.cpp  kmer16.cpp  kmer17.cpp  kmer2.cpp  kmer3.cpp  kmer4.cpp  kmer5.cpp  kmer6.cpp  kmer7.cpp  kmer8.cpp  kmer9.cpp
gatb-core/examples/protos/: MicroSNP.cpp  histo2D.cpp
gatb-core/examples/storage/: storage1.cpp  storage10.cpp  storage2.cpp  storage3.cpp  storage4.cpp  storage5.cpp  storage6.cpp  storage7.cpp  storage8.cpp  storage9.cpp
gatb-core/examples/tools/: ToyTool.cpp  iterators1.cpp  iterators2.cpp  iterators3.cpp  iterators4.cpp  iterators5.cpp  iterators6.cpp  iterators7.cpp  iterators8.cpp  iterators9.cpp  multithreading1.cpp  multithreading2.cpp  multithreading3.cpp  multithreading4.cpp  multithreading5.cpp  multithreading6.cpp  multithreading7.cpp  multithreading8.cpp  observer1.cpp  optionsparser1.cpp  optionsparser2.cpp
gatb-core/scripts/: delivery.sh  delivery_check_repo.sh  delivery_compile.sh  delivery_dump_system.sh  git_tag_manager.sh  github_release_api.sh  github_release_manager.sh  histodump.sh  histognuplot.sh  json-v2.sh  make_official_release.sh  parse_gcc_output.py  test-github_release_api.sh
gatb-core/scripts/NewProject/: CMakeLists.txt  CMakeLists_tools.txt  NewProject.sh  README.md  XXX.cpp  XXX.hpp  main.cpp  package_tool.sh
gatb-core/src/: CMakeLists.txt
gatb-core/src/gatb/: gatb_core.hpp
gatb-core/src/gatb/bank/api/: IAlphabet.hpp  IBank.hpp  Sequence.hpp
gatb-core/src/gatb/bank/impl/: AbstractBank.hpp  Alphabet.hpp  Bank.cpp  Bank.hpp  BankAlbum.cpp  BankAlbum.hpp  BankBam.cpp  BankBam.hpp  BankBinary.cpp  BankBinary.hpp  BankComposite.hpp  BankConverterAlgorithm.cpp  BankConverterAlgorithm.hpp  BankFasta.cpp  BankFasta.hpp  BankHelpers.cpp  BankHelpers.hpp  BankRandom.cpp  BankRandom.hpp  BankRegistery.cpp  BankRegistery.hpp  BankSplitter.cpp  BankSplitter.hpp  BankStrings.hpp  Banks.hpp
gatb-core/src/gatb/bcalm2/: .gitignore  ThreadPool.h  bcalm_1.cpp.standalone  bcalm_algo.cpp  bcalm_algo.hpp  bglue.cpp.standalone  bglue_algo.cpp  bglue_algo.hpp  binSeq.h  lockstdqueue.h  logging.cpp  logging.hpp  ograph.cpp  ograph.cpp.128bits  ograph.cpp.gatb  ograph.h  ograph.h.128bits  sharedqueue.hpp  sharedvectorqueue.hpp  unionFind.hpp
gatb-core/src/gatb/debruijn/api/: IContainerNode.hpp  IGraph.hpp
gatb-core/src/gatb/debruijn/impl/: BranchingAlgorithm.cpp  BranchingAlgorithm.hpp  (+31 more)
gatb-core/src/gatb/template/: TemplateSpecialization10.cpp.in  TemplateSpecialization2.cpp.in  TemplateSpecialization3.cpp.in  TemplateSpecialization4.cpp.in  TemplateSpecialization5.cpp.in  TemplateSpecialization6.cpp.in  TemplateSpecialization7.cpp.in  TemplateSpecialization8.cpp.in  TemplateSpecialization9.cpp.in
gatb-core/test/: CMakeLists.txt
gatb-core/test/benchmark/: CMakeLists.txt  bench1.cpp  bench_bagfile.cpp  bench_bloom.cpp  bench_graph.cpp  bench_minim.cpp  bench_mphf.cpp
gatb-core/test/db/: NIST7035_TAAGGCGA_L001_R1_001_5OK.fastq.leon-ref  README.md  album.txt  celegans_reads.h5  leon1.fastq.leon-ref  leon2.fastq.leon-ref  microsnp.fa  query.fa  reads1.fa  reads2.fa  sample.fastq  sample1.fa  sample2.fa
gatb-core/test/functional/test1/: run.sh
gatb-core/test/jenkins/: finalize-release-debian.sh  finalize-release-macos.sh  publish-doc-api.sh  test-bin-debian7-64bits-gcc-4.7.sh  test-bin-macos-10.9.5-gcc-4.2.1  test-bin-macos-10.9.5-gcc-4.2.1.sh  test-docker-gatb-core-compile-clang36.sh  test-snippets-debian7-64bits-gcc-4.7.sh  test-suite-debian7-64bits-gcc-4.7.sh  test-suite-fedora20-gcc-4.8.sh  test-suite-macos-10.9.5-clang-6.0.sh  test-suite-macos-10.9.5-gcc-4.2.1.sh  test-valgrind-debian7-64bits-gcc-4.7.sh
gatb-core/test/jenkins/leon/: README.md  download.sh  test_integrity.sh  tool-leon-functional-tests-compile.sh  tool-leon-functional-tests-test.sh
gatb-core/test/slaves/: ubuntu16-shell-provisioner.sh
gatb-core/test/unit/: CMakeLists.txt
gatb-core/test/unit/src/: CppunitCommon.hpp  main.cpp
gatb-core/tools/: BankConverter.cpp  BankDownload.cpp  Bloocoo.cpp  CMakeLists.txt  ClearCache.cpp  DSK.cpp  KmerChecksum.cpp  bankgen.cpp  dbgcheck.cpp  dbgh5.cpp  dbginfo.cpp  dbgtopology.cpp  leon.cpp
(+254 files in other folders)
